[project]
name = "longhorn-replica-rebalancer"
version = "0.1.0"
description = "Automated Longhorn volume replica rebalancer for k3s clusters"
requires-python = ">=3.14"
dependencies = [
    "kubernetes>=32.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "mypy>=1.17",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["rebalancer"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "ERA", "PL", "RUF"]
ignore = ["E501", "PLR2004", "PLR0913"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["kubernetes", "kubernetes.*"]
ignore_missing_imports = true
